# irec

./: CMakeLists.txt  MANIFEST.in  README.md  Resume.rar
ireclib/: CMakeLists.txt  any.h  array2d.h  base64.h  bit_stream.h  bridge.h  bsp.h  clustering.h  cmd_line_parser.h  conditioning_class.h  config.h.in  console_progress_indicator.h  cpp_pretty_printer.h  crc32.h  data_io.h  directed_graph.h  dnn.h  entropy_decoder.h  entropy_encoder.h  error.h  float_details.h  functional.h  global_optimization.h  graph_cuts.h  graph_utils_threaded.h  gui_widgets.h  hash_map.h  hash_table.h  image_keypoint.h  image_transforms.h  invoke.h  irl_basic_cpp_build_tutorial.txt  irl_include_path_tutorial.txt  is_kind.h  lsh.h  lz77_buffer.h  lzp_buffer.h  manifold_regularization.h  map.h  math.h  (+64 more)
ireclib/all/: source.cpp
ireclib/any/: any.h  any_abstract.h  any_decision_function.h  any_decision_function_abstract.h  any_function.h  any_function_abstract.h  any_trainer.h  any_trainer_abstract.h  storage.h
ireclib/array/: array_kernel.h  array_kernel_abstract.h  array_tools.h  array_tools_abstract.h
ireclib/array2d/: array2d_generic_image.h  array2d_kernel.h  array2d_kernel_abstract.h  serialize_pixel_overloads.h
ireclib/base64/: base64_kernel_1.cpp  base64_kernel_1.h  base64_kernel_abstract.h
ireclib/bayes_utils/: bayes_utils.h  bayes_utils_abstract.h
ireclib/bit_stream/: bit_stream_kernel_1.cpp  bit_stream_kernel_1.h  bit_stream_kernel_abstract.h  bit_stream_kernel_c.h  bit_stream_multi_1.h  bit_stream_multi_abstract.h  bit_stream_multi_c.h
ireclib/bound_function_pointer/: bound_function_pointer_kernel_1.h  bound_function_pointer_kernel_abstract.h
ireclib/bridge/: bridge.h  bridge_abstract.h
ireclib/clustering/: bottom_up_cluster.h  bottom_up_cluster_abstract.h  chinese_whispers.h  chinese_whispers_abstract.h  modularity_clustering.h  modularity_clustering_abstract.h  spectral_cluster.h  spectral_cluster_abstract.h
ireclib/compress_stream/: compress_stream_kernel_1.h  compress_stream_kernel_2.h  compress_stream_kernel_3.h  compress_stream_kernel_abstract.h
ireclib/cpp_pretty_printer/: cpp_pretty_printer_kernel_1.h  cpp_pretty_printer_kernel_2.h  cpp_pretty_printer_kernel_abstract.h
ireclib/data_io/: cifar.cpp  cifar.h  cifar_abstract.h  image_dataset_metadata.cpp  image_dataset_metadata.h  libsvm_io.h  libsvm_io_abstract.h  load_image_dataset.h  load_image_dataset_abstract.h  mnist.cpp  mnist.h  mnist_abstract.h
ireclib/fft/: fft.cpp  fft.h  fft_size.h  fft_stl.h  kiss_fft.h  mkl_fft.h
ireclib/general_hash/: count_bits.h  count_bits_abstract.h  general_hash.h  hash.h  hash_abstract.h  murmur_hash3.h  murmur_hash3_abstract.h  random_hashing.h  random_hashing_abstract.h
ireclib/graph/: graph_kernel_1.h  graph_kernel_abstract.h
ireclib/graph_utils/: edge_list_graphs.h  edge_list_graphs_abstract.h  find_k_nearest_neighbors_lsh.h  find_k_nearest_neighbors_lsh_abstract.h  function_objects.h  function_objects_abstract.h  graph_utils.h  graph_utils_abstract.h  ordered_sample_pair.h  ordered_sample_pair_abstract.h  sample_pair.h  sample_pair_abstract.h
ireclib/gui_core/: gui_core_kernel_1.cpp  gui_core_kernel_1.h  gui_core_kernel_2.cpp  gui_core_kernel_2.h  gui_core_kernel_abstract.h  windows.h
ireclib/hash_map/: hash_map_kernel_1.h  hash_map_kernel_abstract.h  hash_map_kernel_c.h
ireclib/hash_table/: hash_table_kernel_1.h  hash_table_kernel_2.h  hash_table_kernel_abstract.h  hash_table_kernel_c.h
ireclib/image_loader/: image_loader.h  image_loader_abstract.h  jpeg_loader.cpp  jpeg_loader.h  jpeg_loader_abstract.h  jxl_loader.cpp  jxl_loader.h  jxl_loader_abstract.h  load_image.h  load_image_abstract.h  png_loader.cpp  png_loader.h  png_loader_abstract.h  webp_loader.cpp  webp_loader.h  webp_loader_abstract.h
ireclib/image_saver/: dng_shared.h  image_saver.h  image_saver_abstract.h  save_jpeg.cpp  save_jpeg.h  save_jpeg_abstract.h  save_jxl.cpp  save_jxl.h  save_jxl_abstract.h  save_png.cpp  save_png.h  save_png_abstract.h  save_webp.cpp  save_webp.h  save_webp_abstract.h
ireclib/java/: CMakeLists.txt  cmake_swig_jni  java_array.h  run_test.sh  swig_api.h  swig_test.java
ireclib/logger/: extra_logger_headers.cpp  extra_logger_headers.h  logger_config_file.cpp  logger_config_file.h  logger_kernel_1.cpp  logger_kernel_1.h  logger_kernel_abstract.h
ireclib/lsh/: create_random_projection_hash.h  create_random_projection_hash_abstract.h  hashes.h  hashes_abstract.h  projection_hash.h  projection_hash_abstract.h
ireclib/lzp_buffer/: lzp_buffer_kernel_1.h  lzp_buffer_kernel_2.h  lzp_buffer_kernel_abstract.h  lzp_buffer_kernel_c.h
ireclib/map/: map_kernel_1.h  map_kernel_abstract.h  map_kernel_c.h
ireclib/matrix/: cblas_constants.h  matrix.h  matrix_abstract.h  matrix_assign.h  matrix_assign_fwd.h  matrix_blas_bindings.h  matrix_cholesky.h  matrix_conj_trans.h  matrix_conv.h  matrix_conv_abstract.h  matrix_data_layout.h  matrix_data_layout_abstract.h  matrix_default_mul.h  matrix_eigenvalue.h  matrix_exp.h  matrix_exp_abstract.h  matrix_expressions.h  matrix_fft.h  matrix_fft_abstract.h  matrix_fwd.h  matrix_generic_image.h  matrix_la.h  matrix_la_abstract.h  matrix_lu.h  matrix_mat.h  matrix_mat_abstract.h  matrix_math_functions.h  matrix_math_functions_abstract.h  matrix_op.h  matrix_qr.h  matrix_read_from_istream.h  matrix_subexp.h  matrix_subexp_abstract.h  matrix_trsm.h  matrix_utilities.h  matrix_utilities_abstract.h  symmetric_matrix_cache.h  symmetric_matrix_cache_abstract.h
ireclib/memory_manager/: memory_manager_kernel_1.h  memory_manager_kernel_2.h  memory_manager_kernel_3.h  memory_manager_kernel_abstract.h
ireclib/memory_manager_stateless/: memory_manager_stateless_kernel_1.h  memory_manager_stateless_kernel_2.h  memory_manager_stateless_kernel_abstract.h
ireclib/numerical_integration/: integrate_function_adapt_simpson.h  integrate_function_adapt_simpson_abstract.h
ireclib/opencv/: cv_image.h  cv_image_abstract.h  to_open_cv.h  to_open_cv_abstract.h
ireclib/pipe/: pipe_kernel_1.h  pipe_kernel_abstract.h
ireclib/python/: numpy_image.h  (+3 more)
(+206 files in other folders)
